[package]
name = "run-everywhere"
version = "0.1.0"
authors = ["Mike Simms <msimms01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
gpx = "*"
fit_file = "0.3.3"
tcx = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
lib_math = { path = "../LibMath/rust/" }

[lib]
crate-type = ["cdylib", "rlib"]
